--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn clean package
 
       - name: Build Docker image
-        run: docker build -t school-portal .
+        run: docker build -t school-portal -f school-portal/Dockerfile school-portal
 
       - name: Push Docker image
         run: |
