--- a/school-portal/Dockerfile
+++ b/school-portal/Dockerfile
@@ -2,11 +2,11 @@ FROM maven:3.9-eclipse-temurin-23 AS build
 
 WORKDIR /app
 
-COPY school-portal/pom.xml .
+COPY pom.xml .
 
 RUN mvn dependency:go-offline
 
-COPY school-portal/src /app/src
+COPY src /app/src
 
 RUN mvn clean package -DskipTests
 
