Update CI workflow to set working directory for Maven build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean package
+        working-directory: school-portal
 
       - name: Build Docker image
         run: docker build -t school-portal -f school-portal/Dockerfile school-portal
