Refactor configuration files to YAML format and update CI/CD pipeline for JDK 17 and Docker integration

--- a/school-portal/pom.xml
+++ b/school-portal/pom.xml
@@ -27,7 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>23</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -96,11 +96,6 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -108,6 +103,29 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.school.SchoolPortalApplication</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>9.5</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:23-jre</image>
+                    </from>
+                    <to>
+                        <image>897729121360.dkr.ecr.us-east-1.amazonaws.com/school-portal:latest</image>
+                    </to>
+                </configuration>
             </plugin>
         </plugins>
     </build>
