--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,23 +14,34 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: '23'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Build with Maven
         run: mvn clean package
-        working-directory: school-portal
 
-      - name: Build Docker image
-        run: docker build -t school-portal -f school-portal/Dockerfile school-portal
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Push Docker image
-        run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker tag school-portal ${{ secrets.DOCKER_USERNAME }}/school-portal
-          docker push ${{ secrets.DOCKER_USERNAME }}/school-portal
+
+      - name: Build and Push Image to AWS ECR with Jib
+        run: mvn jib:build -Dimage.uri=${{ secrets.AWS_REPOSITORY_URI }}:latest
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ AWS_REGION }}
+
+      - name: Log in to Docker Hub
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+      - name: Build Container Image to Docker Daemon with Jib
+        run: mvn jib:dockerBuild -Dimage.uri=${{ secrets.DOCKERHUB_REPOSITORY_URI }}:latest
+
+      - name: Push Docker Hub Image
+        run: docker push ${{ secrets.DOCKERHUB_REPOSITORY_URI }}:latest
