Add JPA and SQL initialization configuration to application.yml

--- a/school-portal/src/main/resources/application.yml
+++ b/school-portal/src/main/resources/application.yml
@@ -11,6 +11,15 @@ spring:
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+  sql:
+    init:
+      mode: always
+
   mail:
     host: smtp.gmail.com
     port: 587
