--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,10 @@ jobs:
       mysql:
         image: mysql:8
         env:
-         MYSQL_ROOT_PASSWORD: ${{ secrets.DB_ROOT_PASSWORD }}
+         MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
          DB_URL: ${{ secrets.DB_URL }}
-         DB_USERNAME: ${{ secrets.DB_USERNAME }}
-         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+         DB_USERNAME: ${{ secrets.MYSQL_USER }}
+         DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         ports:
           - 3306:3306
         options: >-
@@ -39,6 +39,12 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
+        env:
+          DB_URL: ${{ secrets.DB_URL }}
+          DB_USERNAME: ${{ secrets.MYSQL_USER }}
+          DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+          EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
         run: mvn clean package
         working-directory: ./school-portal
 
