--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,15 +32,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Wait for MySQL to be ready
-        run: |
-          for i in {30..0}; do
-            if echo 'SELECT 1' | mysql -h127.0.0.1 -uroot -p${{ secrets.MYSQL_ROOT_PASSWORD }}; then
-              break
-            fi
-            sleep 1
-          done        
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -79,7 +70,7 @@ jobs:
 
       - name: Build Container Image to Docker Daemon with Jib
         working-directory: ./school-portal
-        run: mvn clean compile jib:dockerBuild
+        run: mvn clean compile jib:dockerBuild -Dimage=${{ secrets.DOCKERHUB_REPOSITORY_URI }}:latest
 
       - name: Push Docker Hub Image
         run: docker push ${{ secrets.DOCKERHUB_REPOSITORY_URI }}:latest
