--- a/.github/workflows/main_school-portal.yml
+++ b/.github/workflows/main_school-portal.yml
@@ -25,6 +25,7 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
+        working-directory: ./school-portal
         run: mvn clean install
 
       - name: Upload artifact for deployment job
