Add packaging type for school portal project

--- a/school-portal/pom.xml
+++ b/school-portal/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.school</groupId>
     <artifactId>school-portal</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>school-portal</name>
     <description>Demo project for Spring Boot</description>
     <url/>
